<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtdl_demo_bt_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1822755149@qq.com">mujue</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rtdl_demo_interfaces</depend>
  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
